--- a/CameraXApp-Reroll2/app/src/main/AndroidManifest.xml
+++ b/CameraXApp-Reroll2/app/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
 
     <!-- 硬件特性声明 -->
     <uses-feature android:name="android.hardware.camera.any" />
+    <uses-feature android:name="android.hardware.camera.front" android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 
     <!-- 权限声明 -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" /> <!-- 仅针对 Android 9 及以下 -->
-
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
     <application
         android:theme="@style/AppTheme"
     android:allowBackup="true"
@@ -20,8 +21,7 @@
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    tools:targetApi="31">
+    android:supportsRtl="true">
 
     <activity
         android:name=".MainActivity"
